Fixing filter alignment on firefox with jquery

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -237,7 +237,6 @@ a:hover {
 
 .pic {
     display: none;
-    display: -webkit-flex;
     background: #0288d1;
 }
 
